--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP = app.py
 FLASK_ENV = development
-DB_URI = postgresql://postgres:1234@localhost:5432/python_course_test
+DB_URI = mysql+pymysql://root:8676@localhost:3306/flask_orders_db
 JWT_SECRET_KEY = senha-gerada-para-token-jwt
